--- a/style.css
+++ b/style.css
@@ -9,24 +9,54 @@ header {
     color: #fff;
     padding: 10px;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-nav ul {
+.logo img {
+    max-width: 100px;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+}
+
+.nav-links {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 10px;
+.nav-links li {
+    margin-right: 15px;
 }
 
-main {
-    padding: 20px;
+.nav-links a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    transition: color 0.3s ease-in-out;
 }
 
-footer {
+.nav-links a:hover {
+    color: #ffc107; /* Change color on hover */
+}
+
+.social-icons {
+    display: flex;
+    margin-left: auto;
+}
+
+.social-icons a {
+    margin-left: 10px;
+    display: inline-block;
+}
+
+.footer {
     background-color: #333;
     color: #fff;
     text-align: center;
