--- a/style.css
+++ b/style.css
@@ -13,18 +13,86 @@ header {
     text-align: center;
 }
 
-nav {
+header {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    max-width: 50px;
+}
+
+nav {
     background-color: #555;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
 }
 
-nav a {
-    color: white;
-    text-decoration: none;
-    padding: 10px;
+.nav-left {
+    display: flex;
+    align-items: center;
+}
+
+.logo-mobile {
+    display: none;
+    max-width: 40px;
+    margin-right: 10px;
+}
+
+.pages {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.pages li {
     margin: 0 10px;
+}
+
+.pages a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.3s;
+}
+
+.pages a:hover {
+    color: #ccc;
+}
+
+.nav-right {
+    display: flex;
+    align-items: center;
+}
+
+.fa {
+    font-size: 20px;
+    color: white;
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+/* Add specific styles for each social media icon if needed */
+.fa-facebook:hover {
+    color: #3b5998;
+}
+
+.fa-twitter:hover {
+    color: #1da1f2;
+}
+
+.fa-instagram:hover {
+    color: #e4405f;
 }
 
 section {
